# mimo-docagent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
apply/: application.yaml
examples/: analyze_demo.py
src/docagent/: __init__.py  analyst.py  cli.py  client.py  extractor.py  parser.py
